The Oct  8 15:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/FastMap.x: Minor bugfixes and updates.
	* src/NSArray.m: Optimisation - don't use malloc unless really needed.
	* src/NSCountedSet.m: Tidied
	* src/NSSet.m: Tidied - core/non-core separation made.
	* src/NSGArray.m: Rewrite - simpler and faster.
	* src/NSGCountedSet.m: Rewrite to use FastMap (and work).
	* src/NSGDictionary.m: Tidied initialisation.
	* src/NSGSet.m: Rewrite to use FastMap - much faster.
	* src/include/NSSet.h: tidied - core/non-core stuff.

Tue Oct  6 16:35:48 1998  Adam Fedor  <fedor@doc.com>

	* aclocal.m4: Add win32 test
	* configure.in: Use DYNAMIC_LINKER test.
	* src/GNUmakefile: Add win32-load.h
	* src/win32-load.h: New file.

Tue Oct  6 16:45:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/FastMap.x: New map table for dictionaries.
	* src/include/fast.x: New stuff for avoiding objc message overheads.
	* src/NSGCString.m: Hashing and comparison performance improvments
	* src NSGDictionary.m: Optimisation
	* src NSGString.m: Optimisation
	* src/NSObject.m: Optimisation
	* src/NSString.m: Optimisation

Sat Oct  3 23:00:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSString.m: Moved NXConstantString stuff out to NSGCString.m
	* src/NSGCString.m: Added NXConstantString (inherits from NSGCString)
	and modified for efficient ([-isEqual:]) and ([-isEqualToString:])
	methods.

Thu Sep 30 17:45:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	More performance work - huge improvement in dictionary lookup and
	perhaps 15 percent improvement elsewhere.
	* src/NSString.m: ([-hash]) changed hash generation to produce a
	more evenly distributed value so that dictionary lookup works
	better for large dictionaries full of similar keys.
	* src/NSDictionary.m: ([+dictionaryWithObjectsAndKeys:,...]) fixed
	memory leak.
	* src/include/NSGDictionary.h: Removed - not needed.
	* src/NSGDictionary.m.old: Backup added.