@@ -694,7 +694,7 @@ YY_RULE_SETUP
 {
                                   if(plleng==1) {
                                     BEGIN INITIAL;
-				    pllval.obj=[NSString stringWithCString:""];
+				    pllval.obj=@"";
 				    return NSSTRING;
                                   }
                                   if(pltext[plleng-2] == '\\') {
@@ -1737,7 +1737,7 @@ unescstr (char *src)
 
   *dest_ptr = '\0';     /* terminate dest */
 
-  return [[[NSString alloc] initWithCStringNoCopy: dest
-					   length: dest_ptr - dest
-				     freeWhenDone: YES] autorelease];
+  return [[[NSGCString alloc] initWithCStringNoCopy: dest
+					     length: dest_ptr - dest
+				       freeWhenDone: YES] autorelease];
 }
