@@ -1,3 +1,8 @@
+Tue Oct 13 09:24:17 1998  Adam Fedor  <fedor@doc.com>
+
+	* src/include/NSNotification.h: Addd placeholder in
+	NSNotificationCenter for size of NotificationDispatcher.
+
 The Oct  8 15:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* src/FastMap.x: Minor bugfixes and updates.
